objects/Child__c.object
<CustomObject>
    <label>Child</label>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type A</fullName>
                </value>
                <value>
                    <fullName>Type B</fullName>
                </value>
                <value>
                    <fullName>Type C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Parent__c</referenceTo>
        <relationshipLabel>Childerns</relationshipLabel>
        <relationshipName>Childerns</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>